添加VT13遥控器上拨动开关数据

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,76 +1,40 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build task",
-            "type": "shell",
-            "command": "cmake --build build",
-            "problemMatcher": [],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
-        },
-        {
-            "label": "download dap",
-            "type": "shell",
-            "command": "mingw32-make -j24 ; mingw32-make download_dap",
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            }
-        },
-        {
-            "label": "download jlink",
-            "type": "shell",
-            "command": "mingw32-make -j24 ; mingw32-make download_jlink",
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            }
-        },
-        {
-            "label": "log",
-            "type": "shell",
-            "command": "JlinkRTTClient",
-            "args": [],
-            "problemMatcher": []
-        },
-        {
-            "type": "cmake",
-            "label": "CMake: 配置",
-            "command": "configure",
-            "preset": "${command:cmake.activeConfigurePresetName}",
-            "problemMatcher": [],
-            "detail": "CMake 模板 配置 任务"
-        },
-        {
-            "label": "Cmake rebuild",
-            "type": "shell",
-            "command": "cmake -S . -B build -G Ninja ",
-            "group": {
-                "isDefault": false
-            },
-            "problemMatcher": [
-                "$gcc"
-            ]
-        },
-        {
-            "label": "flash with JLink+OpenOCD",
+            "label": "Flash STM32",
             "type": "shell",
             "command": "openocd",
             "args": [
-                "-f", "interface/jlink.cfg",          // JLink 接口配置
-                "-f", "target/stm32h7x.cfg",          // 目标芯片配置，换成你的 MCU
-                "-c", "program build/Dust_Gimbal.elf verify reset exit"
+                "-f", "${workspaceRoot}/config/openocd_dap.cfg",
+                "-c", "program build/Dust_InfantryRobotHead.bin verify reset exit 0x08000000"
             ],
-            "problemMatcher": [],
+            "problemMatcher": []
+        },
+        {
+            "label": "clang-tidy full scan",
+            "type": "shell",
+            "command": "run-clang-tidy",
+            "args": [
+                "-p",
+                "build",
+                "App/**/*.cpp",
+                "Bsp/**/*.cpp",
+                "Modules/**/*.cpp"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": ["$gcc"],
             "group": {
                 "kind": "build",
                 "isDefault": false
             },
-            "detail": "Use OpenOCD and JLink to flash ELF file"
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "panel": "shared"
+            }
         }
     ]
 }
